[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://resources/Themes/defaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://resources/Fonts/defaultFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/Styles/HealthBar.gd" type="Script" id=4]
[ext_resource path="res://resources/Styles/backgroundInfoPanel.tres" type="StyleBox" id=5]
[ext_resource path="res://EnemeyPanel.gd" type="Script" id=6]
[ext_resource path="res://resources/Enemies/GenericEnemyResource.tres" type="Resource" id=8]
[ext_resource path="res://MISC/reallySimpleScripts/addText.gd" type="Script" id=9]
[ext_resource path="res://addTexture.gd" type="Script" id=10]
[ext_resource path="res://addHealthText.gd" type="Script" id=11]

[node name="EnemyPanel" type="Panel"]
anchor_right = 0.5
anchor_bottom = 0.3
mouse_filter = 2
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
enemyResource = ExtResource( 8 )

[node name="panel" type="PanelContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.2
anchor_right = 0.75
anchor_bottom = 0.6
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 263.0
margin_bottom = 223.4
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
script = ExtResource( 10 )

[node name="title Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.17
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="title Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Player Name[/center]"
text = "Player Name"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health Panel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.65
anchor_right = 0.9
anchor_bottom = 0.75
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Health Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]HEALTH 100/100[/center]"
text = "HEALTH 100/100"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Health Panel"]
anchor_left = 0.25
anchor_top = 0.55
anchor_right = 0.75
anchor_bottom = 0.8
margin_right = 10.0
margin_bottom = 10.0
theme = ExtResource( 2 )
value = 96.0
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnPanel" type="Panel" parent="."]
anchor_left = 0.1
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.95
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TurnPanel"]
anchor_right = 1.0
anchor_bottom = 0.4
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Their Next Turn[/center]"
text = "Their Next Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="sendHealthToBar" from="." to="Health Panel/ProgressBar" method="_on_EnemyPanel_sendHealthToBar"]
[connection signal="sendHealthToText" from="." to="Health Panel/RichTextLabel" method="_on_EnemyPanel_sendHealthToText"]
[connection signal="sendTitle" from="." to="title Panel/RichTextLabel" method="_on_EnemyPanel_sendTitle"]
[connection signal="setTexture" from="." to="panel/TextureRect" method="_on_EnemyPanel_setTexture"]
